Distribute widths evenly among code points in SynthesizeGraphemeWidths

Previously we did not consider the possibility of a typographic unit
containing multiple surrogate pairs, and could as an effect "lose" part
of the width.

Distribute the width evenly among code points instead to at least get
some sort of consistency.

Bug: 879361
Change-Id: Id87495ff91acd602c3bfa2ae747bcdfce864ad01
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2749236
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#862376}